Changes to html pages

--- a/templates/services_template.html
+++ b/templates/services_template.html
@@ -11,12 +11,9 @@
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
-        </div>
-
-        <div class="grid-x grid-padding-x sticky">
-            <div class="cell small-6 large-4 border" style="background-color: #1a92c9;"><a href="services_template.html">Home</a></div>
-            <div class="cell small-6 large-4 border" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Projects</a></div>
-            <div class="cell small-6 large-4 border" style="background-color: #1a92c9;"><a href="users_template.html">Resume</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services_template.html">Likelihoods</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Services</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="users_template.html">Users</a></div>
         </div>
     </div>
 
@@ -42,8 +39,8 @@
     </div>
 
     <!-- include before closing </body> tag -->
-    <script src="js/vendor.js"></script>
-    <script src="js/foundation.js"></script>
+    <script src="/js/vendor.js"></script>
+    <script src="/js/foundation.js"></script>
     <script type="application/javascript">
         $(document).foundation();
     </script>
