Figured out cereals with multiple webpages hardcoded with menu

--- a/templates/services_template.html
+++ b/templates/services_template.html
@@ -11,8 +11,8 @@
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services_template.html">Likelihoods</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Services</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services_template.html">Services</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Likelihood</a></div>
             <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="users_template.html">Users</a></div>
         </div>
     </div>
