--- a/templates/likelihoods_template.html
+++ b/templates/likelihoods_template.html
@@ -11,16 +11,12 @@
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
-        </div>
-
-        <!-- Hello?! -->
-        <div class="grid-x grid-padding-x sticky">
-            <div class="cell small-6 large-4 border" style="background-color: #1a92c9;"><a href="services_template.html">Home</a></div>
-            <div class="cell small-6 large-4 border" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Projects</a></div>
-            <div class="cell small-6 large-4 border" style="background-color: #1a92c9;"><a href="users_template.html">Resume</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services_template.html">Services</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Likelihood</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="users_template.html">Users</a></div>
         </div>
     </div>
-    
+
     <div id="content">
         <img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />
         <h1 id="manufacturer_name">%%MANUFACTURER%%</h1>
@@ -40,6 +36,14 @@
                 %%CEREAL_INFO%%
             </tbody>
         </table>
+    </div>
+
+    <!-- include before closing </body> tag -->
+    <script src="/js/vendor.js"></script>
+    <script src="/js/foundation.js"></script>
+    <script type="application/javascript">
+        $(document).foundation();
+    </script>
 </body>
 </html>
 
