Added a slider, but does not work yet

--- a/templates/likelihoods_template.html
+++ b/templates/likelihoods_template.html
@@ -17,6 +17,12 @@
         </div>
     </div>
 
+    
+    <div class="rangeslider">
+        <input type="range" min="1" max="100" value="10"
+            class="myslider" id="sliderRange">
+  </div>
+
     <div id="content">
         <img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />
         <h1 id="manufacturer_name">%%MANUFACTURER%%</h1>
