--- a/templates/income.html
+++ b/templates/income.html
@@ -12,9 +12,9 @@
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services_template.html">Services</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="likelihoods_template.html">Likelihood</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="users_template.html">Users</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="age.html">Age</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="income.html">Income</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services.html">Services</a></div>
         </div>
     </div>
 
