Having home page starting to work

--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -34,7 +34,7 @@
             <table>
                 <thead>
                     <tr>
-                        <th class="cereal_title">Sort by Age</th>
+                        <th class="age_title">Sort by Age</th>
                         <th>RespondentID</th>
                         <th>Do you check the daily weather report?</th>
                         <th>How do you typically check the weather?</th>
