--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -35,15 +35,14 @@
                 <thead>
                     <tr>
                         <!--<th class="age_title">Sort by Age</th>-->
-                        <th>RespondentID</th>
-                        <th>Do you check the daily weather report?</th>
-                        <th>How do you typically check the weather?</th>
-                        <th>A specific website or app?</th>
-                        <th>If you had a smartwatch, how likely would you be to check the weather with it?</th>
-                        <th>Age</th>
+                        <th>Age Range</th>
+                        <th>App Name</th>
+                        <th>How many times a day do you check the weather?</th>
                         <th>Gender</th>
-                        <th>Household income</th>
-                        <th>US Region</th>
+                        <th>Income</th>
+                        <th>Region</th>
+                        <th>How often would you check the weather if you had a smart watch</th>
+                        <th>Current Weather Service</th>
                     </tr>
                 </thead>
                 <tbody>
