Previous Next Buttons

--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -30,6 +30,8 @@
         <div id="content">
             <!--<img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />-->
             <h1 id="age_name">%%AGE%%</h1>
+            <a href='%%PREV_PAGE%%'><button>Previous Entry</button></a>
+            <a href='%%NEXT_PAGE%%'><button>Next Entry</button></a>
             <div class="clear"></div>
             <table>
                 <thead>
