--- a/templates/age.html
+++ b/templates/age.html
@@ -12,9 +12,9 @@
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="age.html">Age</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="income.html">Income</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services.html">Services</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyage/0">Age</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyincome/0">Income</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyservices/A">Services</a></div>
         </div>
     </div>
 
@@ -32,12 +32,13 @@
             <table>
                 <thead>
                     <tr>
-                        <th class="cereal_title">Cereal</th>
-                        <th>Calories</th>
-                        <th>Carbs</th>
-                        <th>Protein</th>
-                        <th>Fat</th>
-                        <th>Rating</th>
+                        <th>What is your current weather service?</th>
+                        <th>Specific app</th>
+                        <th>How often would you check the weather if you had a smart watch</th>
+                        <th>Age</th>
+                        <th>Gender</th>
+                        <th>Income</th>
+                        <th>Region</th>
                     </tr>
                 </thead>
                 <tbody>
