--- a/templates/services.html
+++ b/templates/services.html
@@ -1,3 +1,5 @@
+<!-- We can build something in here -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,13 +10,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
+    <a href='%%PREV_PAGE%%'><button>Previous Entry</button></a>
+    <a href='%%NEXT_PAGE%%'><button>Next Entry</button></a>
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="age.html">Age</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="income.html">Income</a></div>
-            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="services.html">Services</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyage/0">Age</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyincome/0">Income</a></div>
+            <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyservices/A">Services</a></div>
         </div>
     </div>
 
@@ -24,24 +27,26 @@
             class="myslider" id="sliderRange">
     </div>
     -->
-    <div class="grid-container show-for-large">
+    <div class="grid-container">
         <div id="content">
-            <img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />
-            <h1 id="manufacturer_name">%%MANUFACTURER%%</h1>
+            <!--<img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />-->
+            <h1 id="Service">%%SERVICE%%</h1>
             <div class="clear"></div>
             <table>
                 <thead>
                     <tr>
-                        <th class="cereal_title">Cereal</th>
-                        <th>Calories</th>
-                        <th>Carbs</th>
-                        <th>Protein</th>
-                        <th>Fat</th>
-                        <th>Rating</th>
+                        <!--<th class="age_title">Sort by Age</th>-->
+                        <th>What is your current weather service?</th>
+                        <th>Specific app</th>
+                        <th>How often would you check the weather if you had a smart watch</th>
+                        <th>Age</th>
+                        <th>Gender</th>
+                        <th>Income</th>
+                        <th>Region</th>
                     </tr>
                 </thead>
                 <tbody>
-                    %%CEREAL_INFO%%
+                    %%WEATHER_INFO%%
                 </tbody>
             </table>
         </div>
@@ -54,4 +59,5 @@
     </script>
 </body>
 </html>
+
 
