Added photos for income and centering

--- a/templates/income.html
+++ b/templates/income.html
@@ -29,8 +29,9 @@
     -->
     <div class="grid-container">
         <div id="content">
+            <img id="income_img" src="%%INCOME_IMAGE%%" alt="%%INCOME_ALT_TEXT%%" />
             <!--<img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />-->
-            <h1 id="Income_range">%%INCOME_RANGE%%</h1>
+            <h1 class="center">%%INCOME_RANGE%%</h1>
             <div class="clear"></div>
             <table>
                 <thead>
