--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,3 +71,13 @@ a {
     text-align: center;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+}
+
+.center {
+    text-align: center;
+}
