Added all photos for the three websites and needed code to work

--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -29,8 +29,8 @@
     -->
     <div class="grid-container">
         <div id="content">
-            <!--<img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />-->
-            <h1 id="age_name">%%AGE%%</h1>
+            <img id="age_img" src="%%AGE_IMAGE%%" alt="%%AGE_ALT_TEXT%%" />
+            <h1 class = "center">%%AGE%%</h1>
             <div class="clear"></div>
             <table>
                 <thead>
