--- a/templates/services.html
+++ b/templates/services.html
@@ -29,8 +29,8 @@
     -->
     <div class="grid-container">
         <div id="content">
-            <!--<img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />-->
-            <h1 id="Service">%%SERVICE%%</h1>
+            <img id="services_img" src="%%SERVICES_IMAGE%%" alt="%%SERVICES_ALT_TEXT%%" />
+            <h1 class = "center">%%SERVICE%%</h1>
             <div class="clear"></div>
             <table>
                 <thead>
