--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -8,6 +8,8 @@
 	<title>Weather Checking</title>
     <link rel="stylesheet" href="/css/foundation.css"/>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-pie.min.js"></script>
 </head>
 <body>
     <a href='%%PREV_PAGE%%'><button>Previous Entry</button></a>
@@ -31,6 +33,34 @@
         <div id="content">
             <img id="age_img" src="%%AGE_IMAGE%%" alt="%%AGE_ALT_TEXT%%" />
             <h1 class = "center">%%AGE%%</h1>
+            <!--<img src="%%ANYCHART%%" alt="Null" />-->
+
+            <div id="container" style="width: 100%; height: 100%"></div>
+            <script>
+                // create data
+                var data = [
+                        {x: "A", value: 637166},
+                        {x: "B", value: 721630},
+                        {x: "C", value: 148662},
+                        {x: "D", value: 78662},
+                        {x: "E", value: 90000}
+                    ];
+                    
+                    // create a pie chart and set the data
+                    chart = anychart.pie(data);
+                    
+                    /* set the inner radius
+                    (to turn the pie chart into a doughnut chart)*/
+                    chart.innerRadius("30%");
+                    
+                    // set the container id
+                    chart.container("container");
+                    
+                    // initiate drawing the chart
+                    chart.draw();
+            </script>
+
+
             <div class="clear"></div>
             <table>
                 <thead>
