--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <a href='%%PREV_PAGE%%'><button>Previous Entry</button></a>
-    <a href='%%NEXT_PAGE%%'><button>Next Entry</button></a>
     <div class="grid-container show-for-large">
         <!-- `grid-x` represents a row -->
         <div class="grid-x grid-padding-x">
@@ -20,7 +18,8 @@
             <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyservices/A">Services</a></div>
         </div>
     </div>
-
+    <a href='%%PREV_PAGE%%' class="button">Previous Entry</a>
+    <a href='%%NEXT_PAGE%%' class="button">Next Entry</a>
     <!--
     <div class="rangeslider">
         <input type="range" min="1" max="100" value="10"
