--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -35,6 +35,7 @@
             <!--<img src="%%ANYCHART%%" alt="Null" />-->
 
             <div id="container" style="width: 100%; height: 100%"></div>
+            <!--<script src = "anychart.js"></script>-->
             <script>
                 // create data
                 var data = [
