--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -40,11 +40,10 @@
             <script>
                 // create data
                 var data = [
-                        {x: "A", value: 637166},
-                        {x: "B", value: 721630},
-                        {x: "C", value: 148662},
-                        {x: "D", value: 78662},
-                        {x: "E", value: 90000}
+                        {x: "Very Unlikely", value: "%%VERY_UNLIKELY%%"},
+                        {x: "Somewhat Unlikely", value: "%%SOMEWHAT_UNLIKELY%%"},
+                        {x: "Somewhat Likely", value: "%%SOMEWHAT_LIKELY%%"},
+                        {x: "Very Likely", value: "%%VERY_LIKELY%%"},
                     ];
                     
                     // create a pie chart and set the data
