--- a/templates/income.html
+++ b/templates/income.html
@@ -20,7 +20,8 @@
             <div class="cell small-4 large-4" style="background-color: #1a92c9;"><a href="/weatherbyservices/A">Services</a></div>
         </div>
     </div>
-
+    <a href='%%PREV_PAGE%%' class="button">Previous Entry</a>
+    <a href='%%NEXT_PAGE%%' class="button">Next Entry</a>
     <!--
     <div class="rangeslider">
         <input type="range" min="1" max="100" value="10"
