Adding the other two tables for income and services

--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -35,7 +35,7 @@
             <h1 class = "center">%%AGE%%</h1>
             <!--<img src="%%ANYCHART%%" alt="Null" />-->
 
-            
+
             <div id="container" style="width: 100%; height: 100%"></div>
             <script>
                 // create data
@@ -43,7 +43,7 @@
                         {x: "Very Unlikely", value: "%%VERY_UNLIKELY%%"},
                         {x: "Somewhat Unlikely", value: "%%SOMEWHAT_UNLIKELY%%"},
                         {x: "Somewhat Likely", value: "%%SOMEWHAT_LIKELY%%"},
-                        {x: "Very Likely", value: "%%VERY_LIKELY%%"},
+                        {x: "Very Likely", value: "%%VERY_LIKELY%%"}
                     ];
                     
                     // create a pie chart and set the data
