--- a/templates/services.html
+++ b/templates/services.html
@@ -8,6 +8,9 @@
 	<title>Weather Checking</title>
     <link rel="stylesheet" href="/css/foundation.css"/>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-pie.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-base.min.js"></script>
 </head>
 <body>
     <div class="grid-container show-for-large">
@@ -30,6 +33,34 @@
         <div id="content">
             <img id="services_img" src="%%SERVICES_IMAGE%%" alt="%%SERVICES_ALT_TEXT%%" />
             <h1 class = "center">%%SERVICE%%</h1>
+
+            <h1 class = "center">Age's Groups For This Service</h1>
+            <div id="container" style="width: 100%; height: 200%"></div>
+            <script>
+                // create data
+                var data = [
+                        {x: "Ages 18 - 29", value: "%%18-29%%"},
+                        {x: "Ages 30 - 44", value: "%%30-44%%"},
+                        {x: "Ages 45 - 59", value: "%%45-59%%"},
+                        {x: "Ages 60 and older", value: "%%60%%"}
+                    ];
+                    
+                    // create a pie chart and set the data
+                    chart = anychart.pie(data);
+                    
+                    /* set the inner radius
+                    (to turn the pie chart into a doughnut chart)*/
+                    chart.innerRadius("30%");
+                    
+                    // set the container id
+                    chart.container("container");
+
+                    
+                    // initiate drawing the chart
+                    chart.draw();
+            </script>
+
+
             <div class="clear"></div>
             <table>
                 <thead>
