Callback updates for next and previous buttons, dynamic error messages, and html for headers with graphs

--- a/templates/income.html
+++ b/templates/income.html
@@ -32,10 +32,13 @@
     <div class="grid-container">
         <div id="content">
             <img id="income_img" src="%%INCOME_IMAGE%%" alt="%%INCOME_ALT_TEXT%%" />
-            <!--<img id="manufacturer_img" src="%%MFR_IMAGE%%" alt="%%MFR_ALT_TEXT%%" />-->
-            <h1 class="center">%%INCOME_RANGE%%</h1>
 
+            <br/>
+            <h2 class = "center">%%INCOME_RANGE%%</h2>
 
+            <br/>
+            <h1 class="center">Region of Residence</h1>
+            
             <div id="container" style="width: 100%; height: 100%"></div>
             <script>
                 // create data
