--- a/templates/services.html
+++ b/templates/services.html
@@ -32,9 +32,11 @@
     <div class="grid-container">
         <div id="content">
             <img id="services_img" src="%%SERVICES_IMAGE%%" alt="%%SERVICES_ALT_TEXT%%" />
-            <h1 class = "center">%%SERVICE%%</h1>
+            <br/>
+            <h2 class = "center">%%SERVICE%%</h2>
 
-            <h1 class = "center">Age's Groups For This Service</h1>
+            <br/>
+            <h1 class="center">Age Range For Service Usage</h1>
             <div id="container" style="width: 100%; height: 200%"></div>
             <script>
                 // create data
