--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,12 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: bold;
+    background-color: #ffffff;
+}
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 table {
