--- a/templates/age_template.html
+++ b/templates/age_template.html
@@ -32,9 +32,11 @@
     <div class="grid-container">
         <div id="content">
             <img id="age_img" src="%%AGE_IMAGE%%" alt="%%AGE_ALT_TEXT%%" />
-            <h1 class = "center">%%AGE%%</h1>
-            <!--<img src="%%ANYCHART%%" alt="Null" />-->
+            <br/>
+            <h2 class = "center">%%AGE%%</h2>
 
+            <br/>
+            <h1 class="center">Likelihood To Use A Smart Watch For Weather</h1>
 
             <div id="container" style="width: 100%; height: 100%"></div>
             <script>
